--- a/Julfiker_Portfolio/Views/Home/Publications.cshtml
+++ b/Julfiker_Portfolio/Views/Home/Publications.cshtml
@@ -28,7 +28,7 @@
         </li>
         <li class="list-group-item bg-dark text-light border border-warning mb-2 rounded">
             <strong class="text-info">“Advancing AI: Exploring the Potentials of Multimodal Large Language Models”</strong><br />
-            <span class="text-secondary">Accepted to CSCI’24 — Will be published by Springer Nature</span>
+            <span class="text-secondary">Accepted to CSCI’24 — Published in Springer Nature</span>
         </li>
     </ul>
 </div>
