--- a/Julfiker_Portfolio/Views/Home/Publications.cshtml
+++ b/Julfiker_Portfolio/Views/Home/Publications.cshtml
@@ -135,7 +135,7 @@
             <span class="text-info fw-semibold">
                 “Advancing AI: Exploring the Potentials of Multimodal Large Language Models”
             </span><br />
-            <span class="text-secondary">Accepted to CSCI’24 — Will be published by Springer Nature</span>
+            <span class="text-secondary">Accepted to CSCI’24 — Published in Springer Nature</span>
         </li>
     </ul>
 </div>
