--- a/Julfiker_Portfolio/Views/Shared/_Layout.cshtml
+++ b/Julfiker_Portfolio/Views/Shared/_Layout.cshtml
@@ -49,7 +49,10 @@
                         <li class="nav-item"><a class="nav-link" href="/Home/Education">Education</a></li>
                         <li class="nav-item"><a class="nav-link" href="/Home/Experience">Experience</a></li>
                         <li class="nav-item"><a class="nav-link" href="/Home/Publications">Publications</a></li>
-                        <li class="nav-item"><a class="nav-link" href="/Home/Activities">Accomplishments</a></li>
+                        <li class="nav-item">
+    <a class="nav-link text-dark" asp-controller="Home" asp-action="Accomplishments">Accomplishments</a>
+</li>
+
                         <li class="nav-item"><a class="nav-link" href="/Home/Projects">Projects</a></li>
                         <li class="nav-item"><a class="nav-link" href="/Home/Research">Research</a></li>
                         <li class="nav-item"><a class="nav-link" href="/Home/Resume">Resume</a></li>
